--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   file_picker: ^8.0.0+1
   flutter_spinkit: ^5.2.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
