--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sqflite_common_ffi_web: ^0.4.3+1
   crypto: ^3.0.3
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
